# airport-simulation

./: .gitignore  Airport.cpp  Airport.h  CMakeLists.txt  ControlPoint.cpp  ControlPoint.h  Event.cpp  Event.h  EventType.cpp  Feature.h  Passenger.cpp  Passenger.h  README.md  Report.cpp  Report.h  inputSample.txt  main.cpp
models/: ControlPoint.cpp  ControlPoint.h  Event.cpp  Event.h  EventType.h  Passenger.cpp  Passenger.h  Report.cpp  Report.h
